# BlendiOs

./: .env.example  .gitignore  Makefile  README.md  project_structure.md  pyproject.toml  run.bat  run.sh
dashboards/: streamlit_dashboard.py
docs/: API_Specification.md  Architecture_Diagram.md  BlendiOS_Master_Specification.md  Database_Schema.sql  QuickStart_Windows.md  Running_the_UI.md
scripts/: seed_db.py  setup_dev_windows.bat  setup_dev_windows.ps1
src/blendios/: __init__.py  __main__.py  constants.py  exceptions.py  main.py
src/blendios/api/: main.py  schemas.py
src/blendios/api/routers/: apps.py  auth.py  files.py  logs.py  processes.py  settings.py  users.py
src/blendios/apps/: __init__.py  app_registry.py  base_app.py
src/blendios/apps/app_store/: __init__.py
src/blendios/apps/browser/: __init__.py  browser_app.py
src/blendios/apps/calculator/: __init__.py  calculator_app.py
src/blendios/apps/file_explorer/: __init__.py  file_explorer_app.py
src/blendios/apps/media_player/: __init__.py
src/blendios/apps/notes/: __init__.py  notes_app.py
src/blendios/apps/paint/: __init__.py
src/blendios/apps/settings/: __init__.py  settings_app.py
src/blendios/apps/task_manager/: __init__.py
src/blendios/apps/terminal/: __init__.py  terminal_app.py
src/blendios/cli/: __init__.py
src/blendios/common/: paths.py
src/blendios/database/: connection.py
src/blendios/desktop/: __init__.py  desktop_shell.py  icon_provider.py  notifications.py  settings_store.py  start_menu.py  taskbar.py  wallpaper_manager.py
src/blendios/filesystem/: __init__.py  models.py
src/blendios/kernel/: __init__.py  crash_handler.py  event_bus.py  kernel.py  memory_manager.py  models.py  process_manager.py  scheduler.py  service_manager.py
src/blendios/memory/: __init__.py
src/blendios/scheduler/: __init__.py
src/blendios/themes/: __init__.py  theme_engine.py
src/blendios/users/: __init__.py  models.py
src/blendios/window_manager/: __init__.py  window.py  window_manager.py
tests/: conftest.py
tests/unit/: test_kernel.py
